--- a/index.html
+++ b/index.html
@@ -2,99 +2,53 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Otaku Birthday</title>
+  <title>HAPPY BIRTHDAY HUY CU</title>
   <style>
     body {
-      background: url('https://i.gifer.com/VgYg.gif') no-repeat center center fixed;
+      background: url('https://media.tenor.com/x8v1oNUOmg4AAAAC/skibidi-toilet.gif') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Comic Sans MS', cursive;
-      color: #fff;
       text-align: center;
-      padding: 80px 20px;
+      padding-top: 60px;
       overflow: hidden;
+      color: hotpink;
+      animation: hue 5s infinite linear;
     }
-
     h1 {
       font-size: 60px;
-      color: #ff66cc;
-      text-shadow: 3px 3px 10px yellow, -3px -3px 10px cyan;
-      animation: glow 1s infinite alternate;
+      text-shadow: 2px 2px 8px red, -2px -2px 8px cyan;
+      animation: bounce 1s infinite alternate;
     }
-
-    p {
-      font-size: 30px;
+    .loli {
+      font-size: 28px;
       color: #00ffff;
-      animation: bounce 1s infinite;
+      animation: spin 8s linear infinite;
     }
-
     .emoji {
-      font-size: 80px;
+      font-size: 50px;
       animation: shake 0.5s infinite;
     }
-
-    audio {
-      display: none;
-    }
-
-    @keyframes glow {
-      from { text-shadow: 0 0 10px pink; }
-      to { text-shadow: 0 0 30px #fff000; }
-    }
-
     @keyframes bounce {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.2); }
-      100% { transform: scale(1); }
+      from { transform: translateY(0); }
+      to { transform: translateY(-20px); }
     }
-
-    @keyframes shake {
-      0% { transform: rotate(-10deg); }
-      50% { transform: rotate(10deg); }
-      100% { transform: rotate(-10deg); }
-    }
-  </style>
-</head>
-<body>
-  <div class="emoji">✨(≧◡≦)✨</div>
-  <h1>Happy Birthday Huy Cu!</h1>
-  <p>Level Max, Cringe Max, Waifu Forever!</p>
-  <div class="emoji">UwU ~♥~</div>
-
-  <audio autoplay loop>
-    <source src="https://files.catbox.moe/3v2i1z.mp3" type="audio/mpeg">
-  </audio>
-</body>
-</html>      100% { transform: rotate(360deg); }
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
     @keyframes shake {
-      0% { transform: rotate(-10deg); }
-      50% { transform: rotate(10deg); }
-      100% { transform: rotate(-10deg); }
+      0% { transform: rotate(-5deg); }
+      50% { transform: rotate(5deg); }
+      100% { transform: rotate(-5deg); }
     }
-    @keyframes rainbow {
+    @keyframes hue {
       0% { filter: hue-rotate(0deg); }
       100% { filter: hue-rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <div class="emoji">✨🎉💥</div>
-  <h1>HAPPY BIRTHDAY HUY CU!!</h1>
-  <p>LV MAX CRINGE CELEBRATION</p>
-  <div class="emoji">🔥👑🦄</div>
-</body>
-</html>      padding: 15px;
-      border-radius: 10px;
-      display: inline-block;
-    }
-  </style>
-</head>
-<body>
-  <h1>CHÚC MỪNG SINH NHẬT HUY CU!</h1>
-  <p>Huy Cu thật là... <strong>CRINGE LV MAX</strong>!!!</p>
-  <img class="gif" src="https://media.giphy.com/media/3ornjXbo3cjqh2BIyY/giphy.gif" width="300" alt="Cringe">
-  <audio autoplay loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
-</body>
-</html>
+  <div class="emoji">✨(づ｡◕‿‿◕｡)づ✨</div>
+  <h1>Happy Birthday Huy Cu!</h1>
+  <p class="loli">Waifu approved. Skibidi certified. Gay energy: MAXIMUM!</p>
+  <div class="emoji">‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍
