--- a/index.html
+++ b/index.html
@@ -1,39 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Web Của Tôi</title>
+    <title>Happy Birthday Huy Cu</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header>
-            <div class="left">
-                <span>Ví: 0đ</span>
-            </div>
-            <div class="right">
-                <button class="login-btn">Đăng Nhập</button>
-                <div class="notification">
-                    <img src="https://img.icons8.com/ios/50/000000/bell.png" alt="notifications">
-                </div>
-            </div>
-        </header>
-
-        <!-- Main content -->
-        <main class="menu">
-            <div class="menu-item">MOD SKIN HD THẤY ĐƯỢC</div>
-            <div class="menu-item">SPAM SỐ ĐIỆN THOẠI FREE VIP</div>
-            <div class="menu-item">FLU ANTIBAND</div>
-            <div class="menu-item">DATA FREE FIRE ANTI NO DNS</div>
-            <div class="menu-item">PANEL PC LINE ESP Aimbot</div>
-            <div class="menu-item">IPA HACK ANTI MẸO</div>
-            <div class="menu-item">ACC CLONE LV 5 TW VN</div>
-            <div class="menu-item">CALL OFF DUTY</div>
-            <div class="menu-item">CHATGPT</div>
-        </main>
+    <div class="background">
+        <h1 class="title">🎉 HAPPY BIRTHDAY HUY CU 🎉</h1>
+        <div class="butterflies">
+            <img src="https://img.icons8.com/ios/50/000000/butterfly.png" alt="butterfly" class="butterfly">
+            <img src="https://img.icons8.com/ios/50/000000/butterfly.png" alt="butterfly" class="butterfly">
+            <img src="https://img.icons8.com/ios/50/000000/butterfly.png" alt="butterfly" class="butterfly">
+        </div>
+        <div class="poop">
+            💩 💩 💩
+        </div>
+        <div class="girl">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Emoji_11F602.svg/1200px-Emoji_11F602.svg.png" alt="girl" class="girl-img">
+        </div>
+        <div class="rainbow">
+            🌈 🌈 🌈 🌈 🌈 🌈 🌈 🌈
+        </div>
     </div>
 </body>
 </html>
