--- a/index.html
+++ b/index.html
@@ -4,60 +4,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Galaxy Viewer</title>
+  <title>Galaxy Love</title>
   <style>
-    body { margin: 0; overflow: hidden; font-family: sans-serif; }
-    #message { position: absolute; top: 20px; left: 20px; color: white; font-size: 1.2rem; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; }
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+      font-family: sans-serif;
+      color: pink;
+    }
+    .floating-heart {
+      position: absolute;
+      font-size: 24px;
+      animation: floatUp linear infinite;
+      color: pink;
+      text-shadow: 0 0 10px hotpink;
+    }
+    @keyframes floatUp {
+      0% {
+        transform: translateY(100vh) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-10vh) scale(1.5);
+        opacity: 0;
+      }
+    }
+    .message {
+      position: absolute;
+      width: 100%;
+      top: 10%;
+      text-align: center;
+      font-size: 2rem;
+      color: pink;
+      text-shadow: 0 0 8px hotpink, 0 0 15px deeppink;
+      animation: pulse 3s infinite alternate;
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      100% { transform: scale(1.05); opacity: 0.9; }
+    }
   </style>
 </head>
 <body>
-  <div id="message">Loading...</div>
-  <canvas id="galaxy"></canvas>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
+  <div class="message">
+    Anh yêu em 💓<br>
+    I love u 💕<br>
+    Mãi là em bé của anh nhé 💖<br>
+    Chúc em ngày 01/06 rơi xuống với tốc độ vừa phải<br>
+    và hơi dày đặc một cách ngẫu nhiên 💝❣️💞💋❤️
+  </div>
   <script>
-    const canvas = document.getElementById("galaxy");
-    const renderer = new THREE.WebGLRenderer({ canvas });
-    renderer.setSize(window.innerWidth, window.innerHeight);
+    const icons = ['💓','💕','💖','❤️','💋','💝','❣️','💞'];
+    const body = document.body;
 
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x000000);
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.className = 'floating-heart';
+      heart.textContent = icons[Math.floor(Math.random() * icons.length)];
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.animationDuration = (2 + Math.random() * 3) + 's';
+      heart.style.fontSize = (16 + Math.random() * 30) + 'px';
+      body.appendChild(heart);
 
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    camera.position.z = 5;
-
-    const geometry = new THREE.BufferGeometry();
-    const particles = 10000;
-    const positions = new Float32Array(particles * 3);
-
-    for (let i = 0; i < particles * 3; i++) {
-      positions[i] = (Math.random() - 0.5) * 20;
+      setTimeout(() => {
+        heart.remove();
+      }, 5000);
     }
 
-    geometry.setAttribute("position", new THREE.BufferAttribute(positions, 3));
-    const material = new THREE.PointsMaterial({ color: 0xffffff, size: 0.05 });
-    const points = new THREE.Points(geometry, material);
-    scene.add(points);
-
-    function animate() {
-      requestAnimationFrame(animate);
-      points.rotation.y += 0.0008;
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    // Handle message from URL
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get("id") || "Không có thông điệp nào";
-    const messageDiv = document.getElementById("message");
-
-    // Đây là nơi bạn có thể map id thành thông điệp thật từ JSON hoặc database
-    const messageMap = {
-      "q0mps5BbQEogkYY1oDSr": "Em là cả dải ngân hà trong lòng anh 💫",
-      "hello": "Chào mừng đến với vũ trụ của bạn! 🌌"
-    };
-
-    messageDiv.textContent = messageMap[id] || `ID: ${id}`;
+    setInterval(createHeart, 300);
   </script>
 </body>
 </html>
